--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,13 +16,13 @@ build:
 
 requirements:
   host:
-    - python >=3.7,<3.11
+    - python >=3.7,<3.12
     - pip
-    - poetry >=1.1.15
+    - poetry-core >=1.0.0
   run:
-    - python >=3.7,<3.11
-    - pandas >=1.3,<=1.4
-    - pyarrow >=4.0,<=9.0
+    - python >=3.7,<3.12
+    - pandas >=1.3,<3.0
+    - pyarrow >=4.0,<13.0
 
 test:
   imports:
